[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Typer.gd" type="Script" id=1]

[node name="Typer" type="Node2D"]
script = ExtResource( 1 )

[node name="IdleWait" type="Timer" parent="."]
one_shot = true

[node name="SpotTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="IdleWait" to="." method="_on_IdleWait_timeout"]
[connection signal="timeout" from="SpotTimer" to="." method="_on_SpotTimer_timeout"]
